--- a/index.html
+++ b/index.html
@@ -5,25 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Genesis Executor</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/5969/5969094.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <header>
+  <nav class="navbar">
+    <div class="logo">⚡ Genesis</div>
+    <ul class="nav-links">
+      <li><a href="#features">Features</a></li>
+      <li><a href="#download">Download</a></li>
+      <li><a href="#discord">Discord</a></li>
+    </ul>
+  </nav>
+
+  <header class="hero">
     <h1>Genesis | Roblox Executor</h1>
-    <p>The ultimate free scripting utility</p>
+    <p>Modern. Safe. Powerful. Your ultimate free scripting utility.</p>
+    <a href="#download" class="btn-primary">Get Started</a>
   </header>
 
-  <section>
-    <h2>Features</h2>
-    <ul>
-      <li>Script Hub Support</li>
-      <li>Clean UI with Modern Design</li>
-      <li>Safe & Fast Injection</li>
-    </ul>
+  <section id="features" class="features">
+    <h2>🔥 Features</h2>
+    <div class="features-grid">
+      <div class="feature-item">
+        <img src="https://cdn-icons-png.flaticon.com/512/5953/5953767.png" alt="Clean UI">
+        <h3>Clean UI</h3>
+        <p>Designed with modern aesthetics for smooth user experience.</p>
+      </div>
+      <div class="feature-item">
+        <img src="https://cdn-icons-png.flaticon.com/512/2950/2950656.png" alt="High Performance">
+        <h3>High Performance</h3>
+        <p>Fast script execution with reliable injection methods.</p>
+      </div>
+      <div class="feature-item">
+        <img src="https://cdn-icons-png.flaticon.com/512/5453/5453971.png" alt="Script Hub">
+        <h3>Script Hub</h3>
+        <p>Access a curated list of powerful and updated scripts.</p>
+      </div>
+    </div>
   </section>
 
-  <section>
-    <a href="https://your-download-link.com" class="download-button">Download Now</a>
+  <section id="download" class="download">
+    <h2>📥 Download</h2>
+    <p>Join our Discord to get the latest version of Genesis Executor.</p>
+    <a href="https://discord.gg/ca2WhwTnPB" target="_blank" class="btn-discord">Join Discord</a>
   </section>
 
   <footer>
